--- a/charlesnaut/templates/pages/home2.html
+++ b/charlesnaut/templates/pages/home2.html
@@ -5,7 +5,7 @@
 
         {% load static %}
         <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap-responsive.min.css" type="text/css" />
-        <link rel="stylesheet" href="{% get_static_prefix %}css/main.css" type="text/css" />
+        <link rel="stylesheet" href="{% get_static_prefix %}css/main3.css" type="text/css" />
         <link rel="stylesheet" href="{% get_static_prefix %}css/main2.css" type="text/css" />
         <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap.min.css" type="text/css" />
         
