--- a/charlesnaut/pages/static/css/main.css
+++ b/charlesnaut/pages/static/css/main.css
@@ -1,17 +1,22 @@
+body * {
+    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif
+}
+
 #banner {
     margin: 0;
-    height: 250px;
+    height: 200px;
     width: 100%;
     color: white;
     background-color: black;
     background-image: url(/static/img/profilepic.jpg);
     background-repeat: no-repeat;
-    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif
 }
 
-#banner:hover {
-    color: black;
+#info-pane:hover {
     background-color: white;
+}
+#info-pane:hover a {
+    color: black;
 }
 
 #info-pane {
@@ -20,75 +25,100 @@
 
 #banner-name {
     padding: 10px;
-    margin-top: 180px;
-    font-size: 80px;
+    margin-top: 140px;
+    font-size: 60px;
+}
+
+#banner-name a {
+    color: white;
+    text-decoration: none;
 }
 
 #bio {
     float: right;
     width: 555px;
     padding: 10px;
-    font-size: 31px;
+    font-size: 28px;
     line-height: 40px;
 }
 
-#page-boxes {
-    position: relative;
-    clear: left;
-    height: 284px;
-    margin: 0 auto;
+#side-bar {
+    font-size: 35px;
+    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif
 }
 
-#first-row {
+.menu-item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
 }
 
-.page-box {
-    height: 125px;
-    
-    text-align: center;
-    margin-left: -5px;
-    margin-right: -5px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    line-height: 50px;
-    
-    border-style: solid;
-    border-width: 1px;
-
-    font-size: 30px;
+.menu-item:hover {
+    background-color: black;
     color: white;
+}
+
+.menu-item a {
+    color: #333;
+}
+
+.menu-item:hover a {
+    background-color: black;
+    color: white;
+}
+.menu-item a:hover {
+    background-color: black !important;
+    color: white;
+    text-decoration: none;
+}
+
+.side-nav .active {
     background-color: black;
 }
 
-.page-box:hover {
-    color: black;
-    background-color: white;
-    border-color: white;
-}
-
-.page-box a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
+.side-nav .active a {
     color: white;
 }
 
-.page-box:hover a {
-    color: black;
+.page {
+    padding: 25px;
+    font-size: 30px;
+    line-height: 40px;
 }
 
-.page-box-icon {
-    position: relative;
-    padding-top: 10px;
-    
+#main p {
+    padding-bottom: 12px;
 }
 
-.page-title {
-    position: absolute;
-    padding-top: 35px;
+p#main-intro {
+    padding-bottom: 25px;
 }
 
-.hidden-page {
-    display: none;
+
+#main .main-details {
+    font-size: 25px;
 }
+
+div.hidden-page {
+    display: none !important;
+}
+
+#project-page p {
+    padding-bottom: 5px;
+}
+
+#project-page div {
+    font-size: 37px;
+}
+
+#projects {
+    padding-bottom: 50px;
+}
+
+#projects div, #papers div {
+ line-height: 50px;
+}
+
+#end-padding {
+    height: 120px;
+}    
