--- a/charlesnaut/templates/pages/home.html
+++ b/charlesnaut/templates/pages/home.html
@@ -11,7 +11,6 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.8.0.min.js" type="text/javascript"></script> --!>
         <script src="{% get_static_prefix %}js/jquery-1.8.3.min.js" type="text/javascript"></script>
         <script src="{% get_static_prefix %}js/bootstrap.min.js" type="text/javascript"></script>
         <script src="{% get_static_prefix %}js/main.js" type="text/javascript"></script>
@@ -30,13 +29,20 @@
     </head>
 
     <body data-spy="scroll" data-target=".side-bar">
-        <div id="banner" class="span12">
+        <div class="span12" id="banner">
             <div id="info-pane">
                 <h1 id="banner-name"><a href="http://charlesnaut.com">Charles Naut</a></h1>
             </div>
        </div>
     
-        
+        <div class="span12 top-bar" id="top-bar">
+            <span class="menu-item"><a href="#main">About</a></span>
+            <span class="menu-item"><a href="#projects">Projects</a></span>
+            <span class="menu-item"><a href="#papers">Papers</a></span>
+            <span class="menu-item"><a href="#slides">Slides</a></span>
+            <span class="menu-item"><a href="#social">Social</a></span>
+        </div>
+			
         <div id="container" class="container-fluid">
             <div class="row-fluid">
                 <div class="span2 side-bar" id="side-bar">
@@ -49,7 +55,7 @@
                     </ul>
                 </div>
 
-                <div class="span9">
+                <div class="span9" id="content">
                     <div class="page current-page" id="main">
                         <p id="main-intro">Hey! I'm a recent Stanford CS grad working as a Program Manager for Microsoft's Bing search engine.</p> 
                         <p class="main-details">My <strong>passions</strong> include technology, social change, and entrepreneurship.</p>
