Choose new font for basic site design

--- a/charlesnaut/pages/static/css/index.css
+++ b/charlesnaut/pages/static/css/index.css
@@ -1,21 +1,34 @@
 body {
-  background-color: black;
+  background-color: white;
 }
 
 body * {
-  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
-  color: white;
+//  font-family: "Segoe UI Light", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+  font-family: "Roboto";
+  font-weight: 100;
+  color: black;
 }
 
 #main {
   margin: 0px;
-  padding-top: 100px;
-  width: 100%;
   height: 100%;
   text-align: center;
 }
 
-#main ul {
+#content {
+  margin: 0px;
+  margin-top: -65px;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+}
+
+#header {
+  font-size: 60px;
+  padding-bottom: 10px;
+}
+
+#content ul {
   width: 246px;
   margin-left: auto;
   margin-right: auto;
