--- a/charlesnaut/templates/pages/home5.html
+++ b/charlesnaut/templates/pages/home5.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{% get_static_prefix %}css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="{% get_static_prefix %}css/index.css" type="text/css" />
   <link rel="stylesheet" href="{% get_static_prefix %}css/icon.css" type="text/css" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:100,400,100italic,300italic,300,400italic,500italic,500,700italic,700,900italic,900" type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -27,15 +28,17 @@
 
 <body>
   <div id="main" class="span12">
-    <h1>Charles Naut</h1>
-    <ul class="socialicons color">
-      <li><a href="http://linkedin.com/in/charlesnaut" class="linkedin" target="_blank">linkedin</a></li>
-      <li><a href="http://twitter.com/cnaut" class="twitter" target="_blank">twitter</a></li>
-      <li><a href="http://blog.charlesnaut.com" class="tumblr" target="_blank">tumblr</a></li>
-      <li><a href="http://quora.com/Charles-Naut" class="quora" target="_blank">quora</a></li>
-      <li><a href="http://pinterest.com/cnaut" class="pinterest" target="_blank">pinterest</a></li>
-      <li><a href="http://plus.google.com/109949815088571911819" class="gpluslight" target="_blank">gpluslight</a></li>
-    </ul>
+    <div id="content" class="span12">
+      <h1 id="header">CHARLES NAUT</h1>
+      <ul class="socialicons color">
+        <li><a href="http://linkedin.com/in/charlesnaut" class="linkedin" target="_blank">linkedin</a></li>
+        <li><a href="http://twitter.com/cnaut" class="twitter" target="_blank">twitter</a></li>
+        <li><a href="http://blog.charlesnaut.com" class="tumblr" target="_blank">tumblr</a></li>
+        <li><a href="http://quora.com/Charles-Naut" class="quora" target="_blank">quora</a></li>
+        <li><a href="http://pinterest.com/cnaut" class="pinterest" target="_blank">pinterest</a></li>
+        <li><a href="http://plus.google.com/109949815088571911819" class="gpluslight" target="_blank">gpluslight</a></li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
