Add title and projects

--- a/charlesnaut/templates/pages/home5.html
+++ b/charlesnaut/templates/pages/home5.html
@@ -30,14 +30,18 @@
   <div id="main" class="span12">
     <div id="content" class="span12">
       <h1 id="header">CHARLES NAUT</h1>
-      <ul class="socialicons color">
-        <li><a href="http://linkedin.com/in/charlesnaut" class="linkedin" target="_blank">linkedin</a></li>
-        <li><a href="http://twitter.com/cnaut" class="twitter" target="_blank">twitter</a></li>
-        <li><a href="http://blog.charlesnaut.com" class="tumblr" target="_blank">tumblr</a></li>
-        <li><a href="http://quora.com/Charles-Naut" class="quora" target="_blank">quora</a></li>
-        <li><a href="http://pinterest.com/cnaut" class="pinterest" target="_blank">pinterest</a></li>
-        <li><a href="http://plus.google.com/109949815088571911819" class="gpluslight" target="_blank">gpluslight</a></li>
-      </ul>
+			<h3>Co-Founder at Black Cape Labs | Full-Stack Web Developer</h3>
+			<h4 id="projects"><a id="project-link" href="https://beta.getsubscribely.com">Subscribely</a> | <a href="http://glean.charlesnaut.com">Fitness Dashboard</a> | <a href="http://considerateapp.com">Considerate App</a> | <a href="http://dodgebook.com">dodgebook</a></h4>
+			<div>
+				<ul class="socialicons color">
+					<li><a href="http://linkedin.com/in/charlesnaut" class="linkedin" target="_blank">linkedin</a></li>
+					<li><a href="http://twitter.com/cnaut" class="twitter" target="_blank">twitter</a></li>
+					<li><a href="http://blog.charlesnaut.com" class="tumblr" target="_blank">tumblr</a></li>
+					<li><a href="http://quora.com/Charles-Naut" class="quora" target="_blank">quora</a></li>
+					<li><a href="http://pinterest.com/cnaut" class="pinterest" target="_blank">pinterest</a></li>
+					<li><a href="http://plus.google.com/109949815088571911819" class="gpluslight" target="_blank">gpluslight</a></li>
+				</ul>
+			</div>
     </div>
   </div>
 </body>
