--- a/charlesnaut/pages/static/css/index.css
+++ b/charlesnaut/pages/static/css/index.css
@@ -3,10 +3,13 @@ body {
 }
 
 body * {
-//  font-family: "Segoe UI Light", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
   font-family: "Roboto";
   font-weight: 100;
   color: black;
+}
+
+a:hover {
+  color: black
 }
 
 #main {
