Add playbook hr link

--- a/charlesnaut/templates/pages/home5.html
+++ b/charlesnaut/templates/pages/home5.html
@@ -30,7 +30,7 @@
   <div id="main" class="span12">
     <div id="content" class="span12">
       <h1 id="header">CHARLES NAUT</h1>
-			<h3>Co-Founder at Black Cape Labs | Full-Stack Web Developer</h3>
+			<h3>Co-Founder at <a href="http://playbookhr.com">Playbook HR</a> | Full-Stack Web Developer</h3>
 			<h4 id="projects"><a id="project-link" href="https://beta.getsubscribely.com">Subscribely</a> | <a href="http://glean.charlesnaut.com">Fitness Dashboard</a> | <a href="http://considerateapp.com">Considerate App</a> | <a href="http://dodgebook.com">dodgebook</a></h4>
 			<div>
 				<ul class="socialicons color">
